init monorepo structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,61 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
+venv/
+__pycache__/
+*.pyc
+*.pyo
+*.egg-info/
+dist/
+build/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Build outputs
+.next/
+dist/
+build/
+out/
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# Environment variables
+.env.local
+.env.*.local
 .DS_Store
-*.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.sublime-project
+.sublime-workspace
 
-# env files (can opt-in for committing if needed)
-.env*
+# OS
+.DS_Store
+Thumbs.db
+*.log
 
-# vercel
-.vercel
+# Python
+*.egg-info/
+.pytest_cache/
+.coverage
+htmlcov/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Node
+npm-debug.log
+yarn-error.log
+
+# IDE specific
+*.iml
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Misc
+.cache/
+.parcel-cache/
+.eslintcache
+
+# planning stuff that's for my eyes only
+planning
